# cpp-lox

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  annotated.html  annotated_dup.js  assert_8hpp.html  assert_8hpp.js  assert_8hpp_source.html  callframe_8cpp.html  callframe_8hpp.html  callframe_8hpp_source.html  chunk_8cpp.html  chunk_8hpp.html  chunk_8hpp_source.html  classChunk-members.html  classChunk.html  classChunk.js  classCompileTimeException-members.html  classCompileTimeException.html  classCompileTimeException.js  classCompiler-members.html  classCompiler.html  classCompiler.js  classCompiler_1_1ParseRule-members.html  classCompiler_1_1ParseRule.html  classCompiler_1_1ParseRule.js  classLexer-members.html  classLexer.html  classLexer.js  classMemoryManager-members.html  classMemoryManager.html  classMemoryManager.js  classMemoryMutator-members.html  classMemoryMutator.html  classMemoryMutator.js  classObject-members.html  classObject.html  (+305 more)
.github/workflows/: build.yaml  codeql.yaml  doxygen.yaml  test.yaml
cmake/: AddDependency.cmake  Base.cmake
planning/: MemoryManagement.md  Namespaces.md
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  enums_0.js  enums_1.js  enums_2.js  (+71 more)
src/: CMakeLists.txt  assert.hpp  chunk.cpp  chunk.hpp  compiler.cpp  compiler.hpp  compiletime_exception.hpp  cpplox-config.hpp.in  exit_code.hpp  init.cpp  init.hpp  lexer.cpp  lexer.hpp  main.cpp  main.dox  memory_manager.hpp  memory_mutator.hpp  object.hpp  object_formatter.hpp  object_string.hpp  opcode.cpp  opcode.hpp  precedence.hpp  runtime_exception.hpp  simple_comperator.hpp  string_hash.cpp  string_hash.hpp  string_operations.hpp  token.cpp  token.hpp  value.cpp  value.hpp  value_formatter.hpp  vm.cpp  vm.hpp
src/backend/: callframe.cpp  callframe.hpp  native_functions.cpp  native_functions.hpp  vm.cpp  vm.hpp
src/bytecode/: chunk.cpp  chunk.hpp  opcode.cpp  opcode.hpp  opcode_formatter.hpp
src/error/: compiletime_exception.hpp  runtime_exception.cpp  runtime_exception.hpp
src/frontend/: compilation_scope.cpp  compilation_scope.hpp  compiler.cpp  compiler.hpp  function_type.hpp  lexer.cpp  lexer.hpp  local.cpp  local.hpp  local_scope.cpp  local_scope.hpp  parse_rule.hpp  precedence.hpp  token.cpp  token.hpp  token_formatter.hpp
src/types/: object.cpp  object.hpp  object_formatter.hpp  object_function.cpp  object_function.hpp  object_native_fuction.hpp  object_native_function.cpp  object_string.cpp  object_string.hpp  value.cpp  value.hpp  value_formatter.hpp
test/: CMakeLists.txt  main.cpp
test/e2e/: base_e2e_test_fixture.cpp  base_e2e_test_fixture.hpp  binary_operator.cpp  for_loop_test.cpp  function_test.cpp  global_variable_test.cpp  if_else_statement_test.cpp  local_variable_test.cpp  logical_operators_test.cpp  native_function_test.cpp  unary_operator.cpp  variable_test.cpp  while_loop_test.cpp
test/integration/: compiler_test.cpp  compiler_test_IT.cpp  lexer_test_IT.cpp  vm_test.cpp  vm_test_IT.cpp
test/unit/: chunk_test.cpp  compiler_test.cpp  compiltation_scope_test.cpp  lexer_test.cpp  local_scope_test.cpp  local_test.cpp  memory_mutator_test.cpp  object_function_test.cpp  object_native_function_test.cpp  object_string_test.cpp  object_test.cpp  string_hash_test.cpp  token_test.cpp  value_test.cpp  vm_test.cpp
